cmu projects done

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
               </p>
               <div class="skills-container">
                 <div class="skill-tag">Agile Methodologies</div>
+                <div class="skill-tag">Formal Methods</div>
                 <div class="skill-tag">Node.js</div>
                 <div class="skill-tag">REST APIs</div>
                 <div class="skill-tag">GraphQL</div>
@@ -303,16 +304,141 @@
               <hr />
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
+              <h5 class="w3-opacity">
+                <b
+                  >Modeling of Nicebook: A New Social Network in Formal
+                  Methods</b
+                >
+              </h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 -
-                Dec 2014
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Fall 2022
               </h6>
-              <p>
-                Consectetur adipisicing elit. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
-              </p>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    The purpose of this project is to model complex structures
+                    that arise in software systems. Me and My groupmates used
+                    the object modeling techniques discussed in class to build a
+                    model of a small social network in Alloy. We also modeled
+                    and analyze privacy aspects of this social network.
+                  </p>
+                </div>
+              </div>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Intro to Comp Sys (CMU 15213/15513) Labs</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2022
+              </h6>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    The labs of Intro to Computer System (15513) are very high
+                    quality. I've learned a lot about how different systems work
+                    in the computer through the simulations of these labs. The
+                    following are the four largest and complicated labs of
+                    15513:
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/513labs.png"
+                    style="width: 100%"
+                    alt="15513 labs"
+                  />
+                </div>
+              </div>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Cache Lab: Understanding Cache Memories. The lab consists of
+                    three parts: 1) write several traces to test the behavior of
+                    a cache simulator, 2) write a small C program that simulates
+                    the behavior of a hardware cache memory, and 3) optimize a
+                    matrix transpose function, with the goal of minimizing the
+                    number of cache misses. Here, I used the idea of blocking.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/cache.png"
+                    style="width: 100%"
+                    alt="cache lab"
+                  />
+                </div>
+              </div>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Malloc Lab: Writing a Dynamic Storage Allocator. I wrote a
+                    correct, efficient, and fast dynamic memory allocator
+                    (similar to malloc functionality in C) which consist of the
+                    malloc, free, realloc, and calloc functions. Here, I used
+                    the idea of segmental explicit free list (with anonymous
+                    struct and anonymous union) to maintain the free chuncks,
+                    coalescing neibouring free chuncks, first fit, eliminated
+                    footer of allocated chuncks by adding a flag bit in the
+                    header to indicate previous allocation status, and
+                    maintianed a seperate list for mini blocks (16KB).
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/malloc.png"
+                    style="width: 100%"
+                    alt="malloc lab"
+                  />
+                </div>
+              </div>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Shell Lab: Writing Your Own Linux Shell. The purpose of this
+                    assignment is to utilize the concepts of process control and
+                    signalling by writing a simple Linux shell program, tsh
+                    (tiny shell), that supports a simple form of job control and
+                    I/O redirection. Tsh is an interactive command-line
+                    interpreter that runs programs on behalf of the user. It
+                    repeatedly prints a prompt, waits for a command line on
+                    stdin, and then carries out some action, as directed by the
+                    contents of the command line. Built-in commands run within
+                    the shell’s process. The child processes created as a result
+                    of interpreting a single command line can be a foreground
+                    job or background job. In this lab, I played with signal
+                    handlers a lot. For example, handling ended backgroud jobs
+                    correctly without interuption the foreground jobs, getting
+                    backgroud jobs to foreground, switching job status, etc.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/tsh.png"
+                    style="width: 100%"
+                    alt="tsh lab"
+                  />
+                </div>
+              </div>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Proxy Lab: Writing a Caching Web Proxy. In this lab I
+                    created a sequential web proxy which can get request, parse
+                    request header and handle errors. I then extended my proxy
+                    to deal with multiple concurrent requests and caching web
+                    objects.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/proxy.png"
+                    style="width: 100%"
+                    alt="proxy lab"
+                  />
+                </div>
+              </div>
               <hr />
             </div>
             <div class="w3-container">
