--- a/index.html
+++ b/index.html
@@ -260,6 +260,140 @@
             </div>
           </div>
 
+          <!-- Past Experience -->
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16">
+              <i
+                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i
+              >Past Experience
+            </h2>
+            <!-- CASIS -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Software Engineer Intern</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
+                May 2022
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-map-marker fa-fw w3-margin-right"></i>Beijing,
+                China
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-building fa-fw w3-margin-right"></i>Institute of
+                Software, Chinese Academy of Sciences
+              </h6>
+              <p>
+                Developed and tested controllers with Spring Framework, MySQL
+                and Elasticsearch for dashboards and downloading interfaces of
+                Big Data Center of Gansu Province Market Supervision and
+                Administration Bureau. This work has been put in use.
+              </p>
+              <hr />
+            </div>
+            <!-- Sunway-Taihu-Light -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Software Engineer Intern</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2018 -
+                Aug 2018
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-map-marker fa-fw w3-margin-right"></i>Wuxi,
+                China
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-building fa-fw w3-margin-right"></i>National
+                Supercomputing Center
+              </h6>
+              <p>
+                Applied C-based Message Passing Interface to parallelize sorting
+                algorithms for the Weather Research and Forecasting Module on
+                Sunway-Taihu-Light Supercomputer.
+              </p>
+              <hr />
+            </div>
+            <!-- Teaching Assistant -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Teaching Assistant</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2018 –
+                Mar 2019
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-map-marker fa-fw w3-margin-right"></i>Worcester,
+                MA
+              </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-building fa-fw w3-margin-right"></i>Worcester
+                Polytechnic Institute
+              </h6>
+              <p>
+                Led office hours to help about 50 students understand and solve
+                probability problems in homework. Evaluated student homework
+                assignments and assessments related to probability knowledge.
+                Took the lead to discuss course materials with students in
+                conferences.
+              </p>
+              <hr />
+            </div>
+          </div>
+
+          <!-- Research -->
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16">
+              <i
+                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i
+              >Researches
+            </h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Front End Developer / w3schools.com</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 -
+                <span class="w3-tag w3-teal w3-round">Current</span>
+              </h6>
+              <p>
+                Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel
+                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
+                soluta ea et odio, unde doloremque repellendus iure, iste.
+              </p>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 -
+                Dec 2014
+              </h6>
+              <p>
+                Consectetur adipisicing elit. Praesentium magnam consectetur vel
+                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
+                soluta ea et odio, unde doloremque repellendus iure, iste.
+              </p>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Graphic Designer / designsomething.com</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
+                Mar 2012
+              </h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <br />
+            </div>
+          </div>
+
           <!-- Course Projects -->
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
@@ -268,6 +402,7 @@
               ></i
               >Course Projects
             </h2>
+            <!-- QA project -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Quality Assurance for Simple Java Text Editor</b>
@@ -303,6 +438,7 @@
               </div>
               <hr />
             </div>
+            <!-- Formal method -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b
@@ -326,6 +462,7 @@
               </div>
               <hr />
             </div>
+            <!-- 513 labs -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Intro to Comp Sys (CMU 15213/15513) Labs</b>
@@ -441,6 +578,7 @@
               </div>
               <hr />
             </div>
+            <!-- WPI projects -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Graphic Designer / designsomething.com</b>
@@ -454,101 +592,7 @@
             </div>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i
-                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
-              ></i
-              >Past Internship
-            </h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Front End Developer / w3schools.com</b>
-              </h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 -
-                <span class="w3-tag w3-teal w3-round">Current</span>
-              </h6>
-              <p>
-                Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
-              </p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 -
-                Dec 2014
-              </h6>
-              <p>
-                Consectetur adipisicing elit. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
-              </p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Graphic Designer / designsomething.com</b>
-              </h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-                Mar 2012
-              </h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <br />
-            </div>
-          </div>
-
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i
-                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
-              ></i
-              >Research
-            </h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Front End Developer / w3schools.com</b>
-              </h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 -
-                <span class="w3-tag w3-teal w3-round">Current</span>
-              </h6>
-              <p>
-                Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
-              </p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 -
-                Dec 2014
-              </h6>
-              <p>
-                Consectetur adipisicing elit. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
-              </p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity">
-                <b>Graphic Designer / designsomething.com</b>
-              </h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-                Mar 2012
-              </h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <br />
-            </div>
-          </div>
+          
 
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
