--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
               ></i
               >Education
             </h2>
+            <!-- CMU -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Carnegie Mellon University</b>
@@ -214,10 +215,13 @@
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2022 -
                 <span class="w3-tag w3-teal w3-round">Current</span>
               </h6>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-certificate fa-fw w3-margin-right"></i>Master of
+                Software Engineering in Scalable Systems
+              </h6>
+              <h6 class="w3-text-teal"><b>GPA</b> : 3.9/4.0</h6>
               <div class="w3-row">
                 <div class="w3-twothird w3-container">
-                  <p>Master of Software Engineering in Scalable Systems</p>
-                  <p>GPA: 3.9/4.0</p>
                   <p>
                     Coursework: (15513) Introduction to Computer System, (17614)
                     Formal Methods, (17615) Data Structures and Algorithms,
@@ -234,14 +238,18 @@
               </div>
               <hr />
             </div>
+            <!-- WPI -->
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Worcester Polytechnic Institute</b></h5>
               <h6 class="w3-text-teal">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 -
                 Aug 2021
               </h6>
-              <p>Bachelor of Science in Computer Science</p>
-              <p>GPA: 3.61/4.0</p>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-certificate fa-fw w3-margin-right"></i>Bachelor
+                of Science in Computer Science
+              </h6>
+              <h6 class="w3-text-teal"><b>GPA</b> : 3.61/4.0</h6>
               <p>
                 Coursework: Intro to Program Design, Calculus, Object-Oriented
                 Design Concepts, Intro to Static Systems, Discrete Mathematics,
@@ -349,47 +357,127 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+                class="fa fa-laptop fa-fw w3-margin-right w3-xxlarge w3-text-teal"
               ></i
               >Researches
             </h2>
+            <!-- Empathetic Dialogue -->
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Front End Developer / w3schools.com</b>
+                <b
+                  >Implicit and Explicit Emotion Enhanced Empathetic Dialogue
+                  Generation</b
+                >
               </h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 -
-                <span class="w3-tag w3-teal w3-round">Current</span>
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
+                May 2022
               </h6>
+              <h6 class="w3-text-teal"><b>Publication</b> : ICTAI 2022</h6>
+              <h6 class="w3-text-teal"><b>Paper Link</b> :</h6>
               <p>
-                Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
+                Implemented a prompt-based data augmentation with T5 and RoBERTa
+                on sentiment keywords to capture similar emotion for a research
+                on Implicit and Explicit Emotion Enhanced Empathetic Dialogue
+                Generation. This paper is submitted to be published for ICTAI
+                2022.
               </p>
               <hr />
             </div>
+
+            <!-- Luminance Compensation -->
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
+              <h5 class="w3-opacity">
+                <b>Luminance Compensation MEMC for Video Frame Interpolation</b>
+              </h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 -
-                Dec 2014
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
+                May 2022
+              </h6>
+              <h6 class="w3-text-teal">
+                <b>Publication</b> : Z. Xu, W. Ying, H. He, Q. Zhu, J. Liang and
+                H. Wang, "Luminance Compensation MEMC for Video Frame
+                Interpolation," in IEEE Access, vol. 10, pp. 120752-120764,
+                2022, doi: 10.1109/ACCESS.2022.3222525.
+              </h6>
+              <h6 class="w3-text-teal">
+                <b>Paper Link</b> :
+                <a href="https://ieeexplore.ieee.org/document/9953108"
+                  >https://ieeexplore.ieee.org/document/9953108</a
+                >
               </h6>
               <p>
-                Consectetur adipisicing elit. Praesentium magnam consectetur vel
-                in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora
-                soluta ea et odio, unde doloremque repellendus iure, iste.
+                Assisted in the composition of the paper Luminance Compensation
+                MEMC for Video Frame Interpolation. This paper is published on
+                IEEE Access.
+              </p>
+              <p>
+                This paper proposes a video interpolation algorithm based on
+                luminance compensation MEMC (LC-MEMC). Firstly, a luminance
+                compensation method based on the electromagnetic irradiation
+                attenuation in human tissue is introduced to improve the
+                performance of motion estimation and motion compensation (MEMC)
+                and reduce matching errors caused by luminance leap. Secondly,
+                LC-MEMC proposes an improved block matching approach, including
+                i) a new search method from basic points to local points and ii)
+                a block matching criterion that simplifies the calculation
+                process. LC-MEMC improves the accuracy and processing speed of
+                video interpolation from three perspectives: adding luminance
+                compensation, improving the search strategy and optimizing the
+                matching degree calculation method for each search position. We
+                evaluated LC-MEMC on collected medical videos and achieved
+                higher accuracy, faster processing speed, and significantly
+                better viewing experience comparing with existing methods.
               </p>
               <hr />
             </div>
+
+            <!-- Pet diary -->
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Graphic Designer / designsomething.com</b>
+                <b
+                  >PET-STORY: An AI Supported System for Recording Pets
+                  behaviors and Creating Pet Stories</b
+                >
               </h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-                Mar 2012
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
+                May 2022
               </h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Implemented a browser based software with Streamlit that
+                    deploys a pipeline of deep-learning models to extracts
+                    actions and sentiments from visual media and generates
+                    articles.
+                  </p>
+                  <p>
+                    To keep records about pets’ lives and understand them
+                    better, pet owners generally take photos or videos. However,
+                    photos or videos without text description are low-level
+                    information which may lead to inefficient recording. What’s
+                    more, lacking semantic and emotional tags affects
+                    understanding of the pets‘ intensions and the interaction
+                    efficiency because of the ‘gulf’ problem in Animal Computer
+                    Interaction. In this study, we first built Pet-Story, an AI
+                    supported system extracting pet-related objects and actions
+                    as semantic tags. Furthermore, we proposed an interactive
+                    co-creation AI system for adding emotional tags and detailed
+                    notes to photos or videos. Through our summative studies of
+                    pet owners (N=15) and people who do not raise pets (N=10) ,
+                    86.7% pet owners enjoyed getting descriptions of pets
+                    behaviors from photos or videos with our system more than by
+                    themselves. 73.3% pet owners indicated that Pet--Story can
+                    help them better understand pets behavior. Pet--Story showed
+                    paths to improvement of Animal Computer Interaction.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img src="./images/Pet.png" style="width: 100%" alt="MSE" />
+                </div>
+              </div>
+
               <br />
             </div>
           </div>
@@ -578,51 +666,39 @@
               </div>
               <hr />
             </div>
-            <!-- WPI projects -->
+            <!-- Juniper -->
             <div class="w3-container">
               <h5 class="w3-opacity">
-                <b>Graphic Designer / designsomething.com</b>
+                <b>Scaling Web Services for the Lightweight Collector</b>
               </h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 -
-                Mar 2012
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2020 -
+                Mar 2021
               </h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <br />
-            </div>
-          </div>
-
-          
-
-          <div class="w3-container w3-card w3-white">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i
-                class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"
-              ></i
-              >School Project
-            </h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever
-              </h6>
-              <p>Web Development! All I need to know in one place</p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>London Business School</b></h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015
-              </h6>
-              <p>Master Degree</p>
-              <hr />
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>School of Coding</b></h5>
-              <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013
-              </h6>
-              <p>Bachelor Degree</p>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    Participated in the industry-level project Scaling Web
+                    Services for the Juniper Lightweight Collector (LWC).
+                    Created new Amazon Web Services (AWS) Cloudwatch Dashboard
+                    widgets, developed anomaly detection and notification
+                    systems. Implemented a tool which aims to ensure version
+                    consistency of all deployed Stacks, and provisioned all
+                    above components with AWS CloudFormation to ensure their
+                    scalability and maintainability. The work equipped other
+                    development teams with a set of solutions to monitor and
+                    discover underlying issues of the LWC and facilitated the
+                    project’s future scalability.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/juniper.png"
+                    style="width: 100%"
+                    alt="Example Dashboard"
+                  />
+                </div>
+              </div>
               <br />
             </div>
           </div>
