--- a/index.html
+++ b/index.html
@@ -701,6 +701,70 @@
               </div>
               <br />
             </div>
+            <!-- B & W Hospital -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b
+                  >Pathfinding Application Built for Brigham and Women’s
+                  Hospital</b
+                >
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Spring 2019
+              </h6>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    This is a course project for my undergrad course Software
+                    Engineering with Prof. Wilson Wong. It is a group project,
+                    with 9 people as a team, we built a pathfinding application
+                    for Brigham & Women’s Hospital. 7 of us built the software
+                    in 4 iterations (agile method) and the other 2 of us built a
+                    that can follow the path according to the path given by the
+                    pathfind application. I used SceneBuilder to build UI views
+                    and program the backend controllers with Java to connect the
+                    UI and database for the following functions of the
+                    application: path-finding, event calendar, room booking,
+                    add, delete and update appointments from the calendar I also
+                    created Junit Tests for the program to find bugs and merge
+                    codes in Github.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <img
+                    src="./images/b&w.png"
+                    style="width: 100%"
+                    alt="Brigham and Women"
+                  />
+                </div>
+              </div>
+              <div class="w3-row">
+                <div class="w3-twothird w3-container">
+                  <p>
+                    This application is designed to be accessible to both the
+                    guests and the employees in Brigham & Women’s Hospital. This
+                    application also allows booking conference rooms and
+                    workspaces, requesting services to locations in the
+                    hospital, editing the nodes and edges of the map, and
+                    possibly checking the wait time for the emergency room. This
+                    application is designed to be placed in kiosks around the
+                    hospital to be used by guests and employees and in computers
+                    to be used by employees.
+                  </p>
+                </div>
+                <div class="w3-third w3-display-container">
+                  <iframe
+                    width="250"
+                    src="https://www.youtube.com/embed/ndhJ93CECVY"
+                    title="Brigham and Women’s demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </div>
+              <hr />
+            </div>
           </div>
 
           <!-- End Right Column -->
@@ -712,6 +776,7 @@
       <!-- End Page Container -->
     </div>
 
+    <!-- footer -->
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Find me on social media.</p>
       <a href="https://www.facebook.com/wenjing.ying"
