--- a/index.html
+++ b/index.html
@@ -765,6 +765,32 @@
               </div>
               <hr />
             </div>
+            <!-- HCI Portfolio -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Human-Computer Interaction Portfolio</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Winter 2018
+              </h6>
+              <h6 class="w3-text-teal">
+                <b>Link</b> :
+                <a href="https://wying8349.github.io/nohomeguy.github.io/"
+                  >https://wying8349.github.io/nohomeguy.github.io/</a
+                >
+              </h6>
+              <p>
+                This page is a showcase for my designs from the Human-Computer
+                Interaction course (CS3041) of Worcester Polytechnic Institute.
+                This course is aimed to help computer scientists see the
+                importance of the other side of engineering: design. We explored
+                5 different topics of design and deeply studied the user
+                experiences of these different projects. I had a breakthrough
+                understanding of the behavior that computers should encourage or
+                constrain.
+              </p>
+              <hr />
+            </div>
           </div>
 
           <!-- End Right Column -->
